# bring-the-flow

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
backend/: pyproject.toml
backend/app/: export.py  main.py  models.py  palettes.py  projects.py  storage.py
backend/tests/: conftest.py  test_export.py  test_projects.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: api.ts  main.ts  state.ts  styles.css
frontend/src/engine/: field.ts  noise.ts  painter.ts  rng.ts  tracer.ts
frontend/src/palettes/: types.ts
frontend/src/ui/: controls.ts  layersPanel.ts  paletteEditor.ts
